DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2001-11-15 allenb   Added valid() test function to thread functors.  The code
                    now tries to test for valid functors at thread creation.
                    Also added destructor that sets the internal values to ones
					that can be easily detected by isValid().
2001-11-13 allenb   Changed the debug GUID category registrators to allow only
                    one registration of the GUIDs.  This means that the 
                    registration macro should only be used from .cpp files now
2001-10-12 allenb   Updated vapor debug to use GUIDs for category identifiers.
                    This allows other systems to extend the categories.
2001-09-23 patrick  Updated test suite to use CppUnit 1.6.0.
2001-09-12 alleb    Added wait interval to the cond var abstractions.
           patrick
2001-09-04 kevn     vpr::ReturnStatus::Success renamed to
                    vpr::ReturnStatus::Succeed; vpr::ReturnStatus::Failure
                    renamed to vpr::ReturnStatus::Fail.
2001-08-06 allenb   Test case for vpr::System added.
2001-08-06 allenb   Introduced Htonll and Ntohll.
2001-07-31 patrick  Fixed major problems with SocketImplBSD::isConnected() and
                    with FileHandleImplUNIX::is{Redable,Writeable}().  These
                    methods now work properly.
2001-07-27 patrick  Removed the compiler flags dealing with warnings from the
                    output of 'vpr-config --cxxflags'.
2001-07-24 allenb   Changed socket bridge templates to use boost::shared_ptr
                    to reference the impl sockets.  This change introduces
                    reference counting on the impl sockets and makes
                    memory management much easier to handle.
2001-07-24 allenb   Added destructor code to SocketNSPRImpl.
2001-07-23 allenb   Added vprTest::BoostTest for testing boost functionality